# FastDevFs

./: .gitignore  CMakeLists.txt  MOUNT_FIXES_SUMMARY.md  README.md  TODO.md  config.ini  fdfs.conf  main.cpp  test_minimal  test_minimal.cpp  test_predictor  tracked_libraries.json
Testing/: stress_test.sh
data/: 4  717  718  8
dataset_folder/: export_model.py  generate_dataset.py  library_folders_dataset.csv  train_classifier.py  training_results.json
dataset_folder/model_artifacts/: feature_names.json  scaler.pkl  tfidf_char.pkl  tfidf_token.pkl
docs/: ALGORITHMS.md  CLI_DESIGN.md  CLI_GUIDE.md  CLI_TUTORIAL.md  CONCEPTS.md  LOCKS.md  MOUNT_OPERATIONS_GUIDE.md  TESTS.md
include/: config.h  dedup_index.h  dedup_ipc.h  dedup_server.h  ipc.h  library_dedup.h  library_manager.h  library_predictor.h  sha256.h  ui.h
include/daemon/: fuse_lowlevel_ops.h
include/daemon/directory tree/: adt.h  hash.h
include/fuse functions/: fs_access.h  fs_chmod.h  fs_chown.h  fs_create.h  fs_getattr.h  fs_mkdir.h  fs_open.h  fs_opendir.h  fs_read.h  fs_readdir.h  fs_rmdir.h  fs_statfs.h  fs_truncate.h  fs_unlink.h  fs_utimens.h  fs_write.h  fuse_common.h  fuse_ops_init.h
src/: cli.cpp  config.cpp  dedup_index.cpp  dedup_server.cpp  ipc.cpp  library_dedup.cpp  library_manager.cpp  library_predictor.cpp  main.cpp  sha256.cpp  ui.cpp
src/daemon/: CMakeLists.txt  fuse_lowlevel_ops.cpp  random.cpp
src/daemon/directory tree/: adt.cpp  adt.h  hash.cpp  hash.h  hash_test  hashtest.cpp  test_adt  test_metadata.cpp  test_min.cpp
src/daemon/fuse functions/: getarr.cpp
src/fuse functions/: fs_access.cpp  fs_chmod.cpp  fs_chown.cpp  fs_create.cpp  fs_getattr.cpp  fs_mkdir.cpp  fs_open.cpp  fs_opendir.cpp  fs_read.cpp  fs_readdir.cpp  fs_rmdir.cpp  fs_statfs.cpp  fs_truncate.cpp  fs_unlink.cpp  fs_utimens.cpp  fs_write.cpp  fuse_ops_init.cpp
src/include/: config.h
src/include/daemon/: dir_manager.h  file_io.h  hash.h  hash_store.h
src/include/fuse_functions/: access.h  file_funcs.h  getattr.h  mkdir.h  opendir.h  readdir.h  rmdir.h  statfs.h  utimens.h
src/include/services/dedup/: dedup_table.h
src/src/: config.cpp
src/src/daemon/: dir_manager.cpp  file_io.cpp  hash.cpp  hash_store.cpp
src/src/fuse_functions/: access.cpp  file_funcs.cpp  getattr.cpp  mkdir.cpp  opendir.cpp  readdir.cpp  rmdir.cpp  statfs.cpp  utimens.cpp
src/src/services/dedup/: dedup_table.cpp
test/: CMakeLists.txt  README.md  persistence_test.cpp  stress_dedup.sh  stress_library_dedup.sh  test_adt.cpp  test_dir_manager.cpp  test_fuse_ops.cpp  test_hash.cpp  test_hash_store.cpp  test_library_dedup.sh  test_library_detection.cpp  test_node_share.cpp  test_persistence.cpp  test_predictor.cpp
test_dir/: a.txt
